[package]
name = "space-sum"
version = "0.1.0"
edition = "2021"
authors = [
    "Sébastien Santoro aka Dereckson"
]
license="BSD-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4.11", features = ["derive"] }
